<resources>
    <string name="app_name">BookDonationApp</string>
    <string name="name">BookBridge</string>
    <string name="sub_name">D O N A T E     Y O U R     B O O K     T O D A Y</string>
    <string name="link">Copyright © 2024 BookBridge | All rights reserved. | Powered by Y3S1@11</string>
    <string name="welcome_txt01">Donate your book via</string>
    <string name="welcome_txt02">Login to the BookBridge</string>
    <string name="welcome_txt03">If you don’t have a account, Sign up with  BookBridge</string>
    <string name="btn_loginUser">Log in as Donor</string>
    <string name="btn_loginCCO">Log in as Collection operator</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="login_txt">Log in with</string>
    <string name="QRDetails">qr_code_image</string>
    <string name="signup_txt">Sign up with</string>
    <string name="incorrectTxt">If you entered incorrectly, </string>
    <string name="resetLink">Reset</string>
    <string name="signUpLinkTxt">If you don’t have an account, </string>
    <string name="signUpLink">Sign up</string>
    <string name="logInLinkTxt">If you already have an account, </string>
    <string name="logInLink">Log in</string>
    <string name="successTxt">Signed up Successfully!</string>
    <string name="UOB01txt">Donate you \n book</string>
    <string name="UOB01dec">Now you can donate your \nbook through BookBridge \nto the nearest schools</string>
    <string name="skipTxt">Skip</string>
    <string name="getStartedTxt">Get Started</string>
    <string name="UOB02txt">Donate by \npayment</string>
    <string name="UOB02dec">Now you can donate a book \nby purchasing through \nBookBridge</string>
    <string name="UOB03txt">Search collection \ncentres</string>
    <string name="UOB03dec">Now you can search the \nnearest collection centre \nfor your book delivery</string>
    <string name="welcome_txt">Welcome Back,</string>
    <string name="username">Have a Good Day!</string>
    <string name="schooltxt">Schools</string>
    <string name="cSchooltxt">Schools - Colombo</string>
    <string name="mSchooltxt">Schools - Mathara</string>
    <string name="jSchooltxt">Schools - Jaffna</string>
    <string name="subSchooltxt">Select a school for the donation according to the \nnearest location</string>
    <string name="subCCtxt">Select a collection centre for the donation according to the nearest location</string>
    <string name="cityTxt">SELECT CITY</string>
    <string name="subCityTxt">Select a city as your location</string>
    <string name="cityOpt01">Colombo</string>
    <string name="cityOpt02">Mathara</string>
    <string name="cityOpt03">Jaffna</string>
    <string name="bookStoreWelcomeTxt">Welcome to</string>
    <string name="bookStoretxt">Book Store</string>
    <string name="subBookStoretxt">Your donation is happening and validating \nthrough your books</string>
    <string name="catTxt">SELECT CATEGORY</string>
    <string name="subLangTxt">Language Selection</string>
    <string name="langOpt01">Sinhala Medium</string>
    <string name="langOpt02">English Medium</string>
    <string name="langOpt03">Tamil Medium</string>
    <string name="subSubTxt">Subject Selection</string>
    <string name="subOpt01">Sinhala</string>
    <string name="subOpt02">Mathematics</string>
    <string name="subOpt03">Science</string>
    <string name="subOpt04">English</string>
    <string name="subOpt05">History</string>
    <string name="grade06Txt">Grade 06</string>
    <string name="grade07Txt">Grade 07</string>
    <string name="grade08Txt">Grade 08</string>
    <string name="grade09Txt">Grade 09</string>
    <string name="grade10Txt">Grade 10</string>
    <string name="sBookTxt">Sinhala Text Book</string>
    <string name="mBookTxt">Mathematics Text Book</string>
    <string name="scBookTxt">Sceince Text Book</string>
    <string name="eBookTxt">English Text Book</string>
    <string name="hBookTxt">History Text Book</string>
    <string name="donateBtn">Donate</string>
    <string name="payBtn">Pay</string>
    <string name="countTxt">books</string>
    <string name="logoutTxt">LOG OUT</string>
    <string name="DONATE" translatable="false">Genarate QR Code</string>
    <string name="success" translatable="false">Genarate Success</string>
    <string name="Thank" translatable="false">Thank You</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="Genarate" translatable="false">Genarate</string>
    <string name="build" translatable="false">Continue</string>
    <string name="delete" translatable="false">delete_qr_code</string>
    <string name="Q" translatable="false">qr_code_image</string>

    <string name="textdownlode" translatable="false">DOWNLODE QR CODE</string>
    <string name="DONATE_word" translatable="false">Your donation is happening and generate QR code
    for your book</string>
    <string name="c" translatable="false">Kothalawala</string>
    <string name="e" translatable="false">63/2, Kaduwela Road, Kothalawala</string>

    <string name="center" translatable="false"> Select a donation center to hand over the book according to the nearest location</string>

    <string name="new_text" translatable="false">Proceed to find a Donation Near Your Area</string>
    <string name="title_activity_scanner_screen">ScannerScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="AgentCenter">Welcome To Collection Center</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="show_route">Show Route</string>
    <string name="zoomIn">+</string>
    <string name="zoomOut">-</string>
    <string name="google_maps_key">AIzaSyD7SFjfE5uXtLaQ9aL76ix7ERK-OnGbEic</string>


    <string name="download_icon">Download Icon</string>download_icon
    <string name="qr_code_image">QR Code Image</string>
    <string name="checkmark_icon">Checkmark Icon</string>

</resources>