<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:mapId="b541c425f3875540"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/activity_map"/>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:gravity="center">

        <Button
            android:id="@+id/button_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoomIn"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black"
            android:textSize="25dp"
            android:padding="1dp" />

        <Button
            android:id="@+id/button_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoomOut"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black"
            android:textSize="35dp"
            android:padding="1dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/navigation"
        android:background="@drawable/rounded_button_background"
        android:contentDescription="@string/show_route"
        android:padding="12dp"
        android:elevation="4dp" />
</RelativeLayout>