<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage02"
    android:backgroundTint="@color/darkblack"
    android:backgroundTintMode="src_over"
    tools:context=".HomeActivity">

    <View
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:background="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-1dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/dp"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="@+id/headerView"
        app:layout_constraintTop_toTopOf="@+id/headerView"
        app:layout_constraintVertical_bias="0.318"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/user_icon"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/username"
        android:textColor="@color/name_color"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/bell"
        android:layout_width="33dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="@+id/headerView"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="@+id/headerView"
        app:layout_constraintTop_toTopOf="@+id/headerView"
        app:layout_constraintVertical_bias="0.339"
        app:srcCompat="@drawable/bell_icon" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_txt"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="@+id/headerView"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/headerView"
        app:layout_constraintTop_toTopOf="@+id/headerView"
        app:layout_constraintVertical_bias="0.292" />

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="@drawable/button_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <ImageView
        android:id="@+id/homeIcon"
        android:layout_width="47dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/home_icon" />

    <ImageView
        android:id="@+id/bookIcon"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toEndOf="@+id/homeIcon"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.454"
        app:srcCompat="@drawable/book_icon_on" />

    <ImageView
        android:id="@+id/payIcon"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/footer"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/bookIcon"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/pay_icon" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/footer"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/payIcon"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/user_icon" />

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="@+id/headerView"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="@+id/headerView"
        app:layout_constraintTop_toTopOf="@+id/headerView"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/bookStoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookStoretxt"
        android:textColor="@color/name_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/subBookStoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subBookStoretxt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookStoreTxt"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catTxt"
        android:textColor="@color/name_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subBookStoreTxt"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subSubTxt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.048" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subOpt01"
        android:layout_width="355dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_view"
        android:text="@string/subOpt01"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subOpt02"
        android:layout_width="355dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_view"
        android:text="@string/subOpt02"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subOpt01" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subOpt03"
        android:layout_width="355dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_view"
        android:text="@string/subOpt03"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subOpt02" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subOpt04"
        android:layout_width="355dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_view"
        android:text="@string/subOpt04"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subOpt03" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subOpt05"
        android:layout_width="355dp"
        android:layout_height="42dp"
        android:background="@drawable/button_view"
        android:text="@string/subOpt05"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subOpt04"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/bWelcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookStoreWelcomeTxt"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bookStoreTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>