<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage01"
    android:backgroundTint="@color/darkblack"
    android:backgroundTintMode="src_over"
    tools:context=".SuccessActivity">

    <Button
        android:id="@+id/login"
        android:layout_width="341dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/app_color"
        android:text="@string/btn_login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkTxt03"
        app:layout_constraintVertical_bias="0.112" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="178dp"
        android:layout_height="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/app_logo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="202dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
        app:srcCompat="@drawable/success_icon" />

    <TextView
        android:id="@+id/successTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="none"
        android:text="@string/successTxt"
        android:textAlignment="center"
        android:textColor="@color/name_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/line"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="@color/hintColor"
        app:layout_constraintBottom_toTopOf="@+id/linkTxt03"
        app:layout_constraintEnd_toEndOf="@+id/successTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successTxt"
        app:layout_constraintVertical_bias="0.826" />


    <TextView
        android:id="@+id/linkTxt03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_txt02"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>